--- a/X.html
+++ b/X.html
@@ -9,5 +9,20 @@
 </head>
 <body>
     <h1>"Welcome to Youtube</h1>
+    <div><p1>I'm in the thick of it, everybody knows
+They know me where it snows, I skied in and they froze
+I don't know no nothin' 'bout no ice, I'm just cold
+Forty somethin' milli' subs or so, I've been told</p1></div>
+
+    <div><p2>I'm in my prime and this ain't even final form
+They knocked me down, but still, my feet, they find the floor
+I went from living rooms straight out to sold-out tours
+Life's a fight, but trust, I'm ready for the war</p2></div>
+
+    <div><p3>Woah-oh-oh
+This is how the story goes
+Woah-oh-oh
+I guess this is how the story goes</p3></div>div>
+
 </body>
 </html>
