--- a/X.html
+++ b/X.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> "Youtube" </title>
-    <link rel="stylesheets" href="my-favorite-x/styles.css/>
+    <link rel="stylesheet" href="styles.css/>
 </head>
 <body>
     <h1>"Welcome to Youtube</h1>
