--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheets" href="styles.css/>
 </head>
 <body>
-    <h1>"Welcome to Youtube</h1>
+    <h1>"Welcome to Youtube"</h1>
     <div><p1>I'm in the thick of it, everybody knows
 They know me where it snows, I skied in and they froze
 I don't know no nothin' 'bout no ice, I'm just cold
@@ -22,7 +22,7 @@ Life's a fight, but trust, I'm ready for the war</p2></div>
     <div><p3>Woah-oh-oh
 This is how the story goes
 Woah-oh-oh
-I guess this is how the story goes</p3></div>div>
+I guess this is how the story goes</p3></div>
 
 </body>
 </html>
