--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ They know me where it snows, I skied in and they froze
 I don't know no nothin' 'bout no ice, I'm just cold
 Forty somethin' milli' subs or so, I've been told</p1>
 <h1></h1>
-    <div><p2>I'm in my prime and this ain't even final form
+    <p2>I'm in my prime and this ain't even final form
 They knocked me down, but still, my feet, they find the floor
 I went from living rooms straight out to sold-out tours
 Life's a fight, but trust, I'm ready for the war</p2>
