--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
+<html> <link rel="stylesheet" href="styles.css/>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> "Youtube" </title>
-    <link rel="stylesheet" href="styles.css/>
 </head>
 <body>
     <h1>"Welcome to Youtube"</h1>
