--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css>
     <title> "Youtube" </title>
 </head>
 <body>
-    <h1>"Welcome to Youtube"</h1>
+    <h1>"Thick of it"</h1>
     <p1>I'm in the thick of it, everybody knows
 They know me where it snows, I skied in and they froze
 I don't know no nothin' 'bout no ice, I'm just cold
