--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <h1>"Thick of it"</h1>
-    <p1>I'm in the thick of it, everybody knows
+    <p id="p1">I'm in the thick of it, everybody knows
 They know me where it snows, I skied in and they froze
 I don't know no nothin' 'bout no ice, I'm just cold
-Forty somethin' milli' subs or so, I've been told</p1>
+Forty somethin' milli' subs or so, I've been told</p>
 <h2></h2>
-    <p2>I'm in my prime and this ain't even final form
+    <p>I'm in my prime and this ain't even final form
 They knocked me down, but still, my feet, they find the floor
 I went from living rooms straight out to sold-out tours
-Life's a fight, but trust, I'm ready for the war</p2>
+Life's a fight, but trust, I'm ready for the war</p>
 <h2></h2>
-    <p3>Woah-oh-oh
+    <p>Woah-oh-oh
 This is how the story goes
 Woah-oh-oh
-I guess this is how the story goes</p3>
+I guess this is how the story goes</p>
 
 </body>
 </html>
