--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>"Thick of it"</h1>
-    <p id="p1">I'm in the thick of it, everybody knows
+    <p style="color:blue;text-align:center;">I'm in the thick of it, everybody knows
 They know me where it snows, I skied in and they froze
 I don't know no nothin' 'bout no ice, I'm just cold
 Forty somethin' milli' subs or so, I've been told</p>
